featured section added

--- a/style.css
+++ b/style.css
@@ -193,6 +193,72 @@ box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.15);
 
 
 /* collection section ends here */
+/* features section starts here */
+.features {
+    display: flex;
+    justify-content: space-around;
+    margin: 100px 0;
+}
+
+.features-img {
+    width: 40%;
+}
+
+.features-content {
+    width: 60%;
+}
+
+.feature-title {
+    font-family: Poppins;
+    font-size: 2.3rem;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+
+.feature-description {
+    font-family: Poppins;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+
+.features button {
+    border-radius: 0;
+}
+
+.features button span {
+    margin-left: 5px;
+}
+/* features section ends here */
+
+/* footer section starts here*/
+footer {
+    background: #0A0826;
+    padding: 50px 0;
+    
+}
+
+.footer-content {
+    text-align: center;
+}
+
+footer h5 {
+    color: #FFF;
+font-family: Poppins;
+font-size: 1.5rem;
+font-weight: 700;
+}
+
+footer p {
+    color: #D9DBE1;
+font-family: Poppins;
+font-size: 14px;
+font-style: normal;
+font-weight: 700;
+line-height: 24px;
+}
+
+.media-links {}
+/* footer section ends here*/
 
 /* header style ends here */
 
@@ -242,6 +308,20 @@ box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.15);
 
     .collection-item {
         margin: 0 auto;
+    }
+
+    .features {
+        flex-direction: column-reverse;
+    }
+    
+    .features-img {
+        width: 100%;
+        padding: 0 30px;
+    }
+    
+    .features-content {
+        width: 100%;
+        padding: 0 30px;
     }
 }
 
